fix: dark mode in the release dialog and product version page
Ref: SRX-M4KA9L

--- a/services/frontend-service/src/assets/_variables.scss
+++ b/services/frontend-service/src/assets/_variables.scss
@@ -169,6 +169,7 @@ $warning-color-locked: #ff8c00;
     --mdc-theme-not-requested: #595959;
     --mdc-filled-button-disabled-container-color: rgb(89, 89, 89);
     --mdc-theme-anchor: #2d70d6;
+    --mdc-theme-anchor-on-primary: #ffffff;
     --mdc-theme-anchor-on-surface: #2d70d6;
 }
 
@@ -193,6 +194,7 @@ $warning-color-locked: #ff8c00;
         --mdc-theme-not-requested: #595959;
         --mdc-filled-button-disabled-container-color: #595959;
         --mdc-theme-anchor: #ffffff;
+        --mdc-theme-anchor-on-primary: #ffffff;
         --mdc-theme-anchor-on-surface: #ffffff;
         --mdc-text-button-label-text-color: #ffffff;
         --mdc-outlined-button-label-text-color: #fffff;
